--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.3",
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "dispatch": "^1.0.2",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-media": "^1.10.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-router-hash-link": "^2.4.3",
+    "swiper": "^11.2.4",
     "yup": "^1.6.1"
   },
   "devDependencies": {
