--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-icons": "^5.4.0",
     "react-media": "^1.10.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.3",
-    "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.9.3",
     "swiper": "^11.2.4",
     "yup": "^1.6.1"
   },
